# call-center

./: CMakeLists.txt  README.md  call-center.json  default-call-center.json  logger.conf
include/: call-center.h  cdr.h  http-server.h  unique-queue.h
src/: call-center.cpp  cdr.cpp  http-server.cpp  main.cpp  rand-generator.hpp
tests/: CMakeLists.txt  unique-queue-tests.cpp
